k8s/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trust-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry
